--- a/src/app.css
+++ b/src/app.css
@@ -75,7 +75,7 @@
 		@apply border-border;
 	}
 	body {
-		@apply bg-background p-4 text-foreground;
+		@apply bg-slate-50 p-4 text-foreground;
 	}
 	.label {
 		@apply font-bold text-slate-600;
